tests/snapshots/basic__justify_content_space_evenly_multiple_items.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0  Ape   Bat   Cat   |
1                    |
2                    |
3                    |
4                    |
5                    |
6                    |
7                    |
8                    |
9                    |
x--------------------x

