tests/snapshots/basic__justify_content_space_evenly_multiple_items_column.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0                    |
1                    |
2Ape                 |
3                    |
4                    |
5Bat                 |
6                    |
7                    |
8Cat                 |
9                    |
0                    |
x--------------------x

